--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <section class="home" id="home">
      <div class="content">
         <h3>its time to <span>Celebrate!</span></h3>
-        <a href="#" class="btn">contact us</a>
+        <a href="#contact" class="btn">contact us</a>
      </div>
 <div class="swiper home-slider">
     <div class="swiper-wrapper">
@@ -46,6 +46,8 @@
         <div class="swiper-slide"><img src="assets\Screenshot 2025-11-10 113159.png" alt=""></div>
         <div class="swiper-slide"><img src="assets\Screenshot 2025-11-10 115557.png" alt=""></div>
         <div class="swiper-slide"><img src="assets\Screenshot 2025-11-10 113208.png" alt=""></div>
+        <div class="swiper-slide"><img src="gallery\product shoot\Screenshot 2025-11-12 113315.png" alt=""></div>
+        <div class="swiper-slide"><img src="gallery\wedding photo\img32.jpg" alt=""></div>
 </div>
 </section>
 
@@ -87,8 +89,8 @@
         <div class="content">
             <h3>We will provide you an unforgettable celebration</h3>
             <p>At CreatixPro, we turn ideas into experiences that stand out. From event management to photoshoots, product shoots, and profile handling, we combine creative energy with professional precision to make every project impactful. Our team focuses on planning, execution, and aesthetics that truly connect with today’s audience..</p>
-            <p>We’re driven by a passion for creativity and a mindset built on results. Whether it’s a launch, a shoot, or a complete brand revamp, we bring a fresh, youthful touch backed by solid expertise. Every detail matters to us — because your brand deserves to look as bold and confident as you are.</p>
-        <a href="#" class="btn">contact us</a>
+            <p>We’re driven by a passion for creativity and a mindset built on results. Whether it’s a launch, a shoot, or a complete brand revamp, we bring a fresh, youthful touch backed by solid expertise. Every detail matters to us because your brand deserves to look as bold and confident as you are.</p>
+        <a href="#contact" class="btn">contact us</a>
 
 
         </div>
