soem context updated

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <div class="box-container">
         <div class="box">
             <i class="fas fa-map-marker-alt"></i>
-            <h3>Event Management</h3>
-            <p>We plan and manage events that make an impact. From concept to execution, our team handles every detail ensuring smooth coordination, creative setups, and an unforgettable experience for your guests.</p>
+            <h3>Event Shoot</h3>
+            <p>We cover events with a clear eye for atmosphere and authenticity. Whether it’s a corporate gathering, a launch, or a private celebration, we focus on clean, well-timed shots that reflect the energy of the moment. You get a polished visual record that feels true to the experience.</p>
         </div>
 
          <div class="box">
@@ -69,8 +69,8 @@
 
          <div class="box">
             <i class="fas fa-utensils"></i>
-            <h3>Wedding Management</h3>
-            <p>Your big day deserves perfection. From venue styling to seamless coordination, we design weddings that are elegant, personal, and effortlessly beautiful so you can focus on creating memories.</p>
+            <h3>Wedding Shoot</h3>
+            <p>We tell wedding stories with a calm, natural style. Every detail matters, from quiet glances to the loud, joyful moments. Our goal is simple: capture the warmth of your day so you can relive it years later, without losing the feeling that made it special.</p>
         </div>
 
          <div class="box">
