soem context updated-2

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         <div class="content">
             <h3>We will provide you an unforgettable celebration</h3>
-            <p>At CreatixPro, we turn ideas into experiences that stand out. From event management to photoshoots, product shoots, and profile handling, we combine creative energy with professional precision to make every project impactful. Our team focuses on planning, execution, and aesthetics that truly connect with today’s audience..</p>
+            <p>At CreatixPro, we turn ideas into experiences that stand out. From event shoot to photoshoots, product shoots and wedding shoots, we combine creative energy with professional precision to make every project impactful. Our team focuses on planning, execution, and aesthetics that truly connect with today’s audience..</p>
             <p>We’re driven by a passion for creativity and a mindset built on results. Whether it’s a launch, a shoot, or a complete brand revamp, we bring a fresh, youthful touch backed by solid expertise. Every detail matters to us because your brand deserves to look as bold and confident as you are.</p>
         <a href="#contact" class="btn">contact us</a>
 
